examples/test/testpolicy11510.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11510
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key49: value2
      key17: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value25
          key20: value0
      podSelector:
        matchLabels:
          key23: value3
          key34: value29
